# zcoder

./: .gitignore  Cargo.toml  README.md
crates/zc-common/: Cargo.toml
crates/zc-common/src/: error.rs  lib.rs
crates/zc-common/src/event/: event_common.rs  mod.rs  mpsc.rs
crates/zc-core/: Cargo.toml
crates/zc-core/src/: event.rs  executor.rs  lib.rs
crates/zc-core/src/exec/: error.rs  exec_event.rs  executor.rs  mod.rs
crates/zc-core/src/model/: mod.rs
crates/zc-core/src/model/base/: crud_fns.rs  db_bmc.rs  mod.rs
crates/zc-core/src/model/bus/: bus_impl.rs  mod.rs  model_event.rs
crates/zc-core/src/model/db/: db_impl.rs  db_setup.rs
crates/zc-core/src/model/entities/: aixc.rs  common.rs  mod.rs  run.rs
crates/zc-core/src/model/types/: epoch_us.rs  id.rs
crates/zc-tui/: Cargo.toml
crates/zc-tui/src/: error.rs  event.rs
crates/zc-tui/src/core/: app_event_handlers.rs  mod.rs  model_loop.rs  tui_event_handlers.rs  tui_impl.rs  tui_loop.rs
crates/zc-tui/src/core/event/: tui_event.rs
dev/specs/: spec-tui-view.md  spec-workspace.md
src/: cmd.rs  error.rs  main.rs
src/exec/: executor.rs  mod.rs
src/tui/: event.rs  mod.rs  term_reader.rs  tui_loop.rs  view.rs
src/tui/core/: app_event_handlers.rs  mod.rs  ping_timer.rs  term_reader.rs  tui_impl.rs  tui_loop.rs
src/tui/core/app_state/: app_state_base.rs  mod.rs  state_processor.rs
src/tui/core/event/: app_event.rs  mod.rs
src/tui/view/: answer_view.rs  footer_view.rs  main_view.rs  mod.rs  prompt_view.rs  status_view.rs
src/tui/view/style/: mod.rs  style_common.rs  style_consts.rs
