[package]
name = "zcoder"
version = "0.0.2-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "AI coding CLI — very early stage"
keywords = ["coding-harness","coding-ai"]
homepage = "https://github.com/zcoder-run/zcoder"
repository = "https://github.com/zcoder-run/zcoder"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# missing_docs = "warn"

[[bin]]
name = "zc"
path = "src/main.rs"

[workspace]
members = [
    "crates/zc-core",
    "crates/zc-common",
    "crates/zc-tui",
]
resolver = "3"

[dependencies]
# -- Sub Crates
zc-core = { workspace = true }
zc-tui = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
# -- Async
tokio = { workspace = true }
# -- CLI
clap = { workspace = true }
# -- Others
derive_more = { workspace = true }

[workspace.dependencies]
zc-core = { path = "crates/zc-core" }
zc-common = { path = "crates/zc-common" }
zc-tui = { path = "crates/zc-tui" }
# -- Tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
# -- Async & Events
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
crossfire = "3.1.12"
# -- CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
# -- AI
genai = { version = "0.7.0-beta" }
udiffx = { version = "0.1", features = ["prompt"]}
aiprog = { git = "https://github.com/zcoder-run/aiprog.git" }
# -- DB
rusqlite = { version = "0.40.0", features = ["bundled", "uuid", "serde_json", "serialize"] }
modql = { version = "0.5.0", features = ["with-rusqlite"]}
# -- FS
simple-fs = { version = "0.12"}
# -- Time
time = { version = "0.3.44", features = ["formatting", "local-offset"]}
time-tz = {version = "2.0.0", features = ["system"]}
# -- Others
macro_rules_attribute = "0.2.2"
uuid = {version = "1.18", features = ["v4", "v7", "fast-rng"]}
derive_more = { version = "2", features = ["from","display","debug", "into", "deref"] }


